Fix calculateCollapsedCount in MultiDimEmbedSettingsPanel

--- a/packages/@ourworldindata/components/src/styles/util.scss
+++ b/packages/@ourworldindata/components/src/styles/util.scss
@@ -34,6 +34,10 @@
     display: block;
 }
 
+.hidden {
+    display: none;
+}
+
 .hide-sm-only {
     @include sm-only {
         display: none !important;
